--- a/src/partials/timer.html
+++ b/src/partials/timer.html
@@ -1,5 +1,5 @@
 <div class="timer">
-  <p class="clockface js-clockface"></p>
+  <p class="clockFace js-clockFace"></p>
 
   <div class="actions">
     <button class="timer-btn" data-action-start>Запустить</button>
