--- a/src/sass/_timer.scss
+++ b/src/sass/_timer.scss
@@ -6,7 +6,7 @@
   border-radius: 2px;
 }
 
-.clockface {
+.clockFace {
   margin-bottom: 15px;
   font-family: 'Roboto Mono', monospace;
   font-size: 80px;
